fix distort effect

--- a/src/assets/styles/assets/animation.scss
+++ b/src/assets/styles/assets/animation.scss
@@ -263,7 +263,7 @@
         position: fixed;
         left: 0;
         top: 0;
-        z-index: 1;
+        z-index: 3;
 }
 // header .header {
 //         z-index: 2000 !important;
